Added Solutions Day 1

--- a/day1/solutions.cls
+++ b/day1/solutions.cls
@@ -1,22 +1,52 @@
-public class AdventOfCode {
+public with sharing class AdventOfCode2021Day1 {
+
+
+    // Solution A
     
-    public static List<String> getInput() {
-        StaticResource input = [Select Id, body from StaticResource where name='imputDay1'];
+    public static Integer howManyIncrease(List<String> beeps) {
+        List<Integer> beepsInt = stringToIntConverter(beeps);
+        Integer counter = 0;
+        for(Integer i=0; i<beepsInt.size()-1; i++) {
+            if(beepsInt[i] < beepsInt[i+1]) {
+                counter +=1;
+            }
+        }
+        return counter;
+    }
+    
+    // Solution B
+
+    public static Integer howManyIncreaseIn3beepsWindow(List<String> beeps) {
+        List<Integer> beepsInt = stringToIntConverter(beeps);
+        Integer counter = 0;
+        for(Integer i=0; i<beepsInt.size()-3; i++) {
+            if((beepsInt[i] + beepsInt[i+1] + beepsInt[i+2] ) < (beepsInt[i+1] + beepsInt[i+2] + beepsInt[i+3])) {
+                counter +=1;
+            }
+        }
+        return counter;
+    }
+
+
+    // Helper Methods
+
+    public static List<String> getInput(String day) {
+        StaticResource  input = [Select Id, body from StaticResource where Name=:day];
         String inputContent = input.body.toString();
         List<String> finalInput = inputContent.split('\\n');
         return finalInput;
     }
-    
-    public static Integer sum2records() {
-        List<String> records = getInput();
-        for(String number1 : records) {
-            Integer numberToFind = 2020 - Integer.valueOf(number1);
-            if(records.contains(String.valueOf(numberToFind))) {
-                return (Integer) Integer.valueOf(number1) * numberTofind;
-            }
+
+
+    private static List<Integer> stringToIntConverter(List<String> strings) {
+        List<Integer> integers = new List<Integer>();
+        for(String stringItem : strings) {
+            integers.add(Integer.valueOf(stringItem));
         }
-        return null;
+        return integers;
     }
-    
 
 }
+
+
+  
